ContextFragment V4: Migration Away from FrozenFragments (#1633)
This PR completes the migration from FrozenFragments to ComputedFragments using ComputedValue for asynchronous data loading. The migration eliminates frozen snapshots from the V4 history format, replacing them with live fragments that compute values lazily on background threads. Key changes include:

* Removal of the FrozenFragment class and all related frozen-state logic
* Introduction of ComputedValue infrastructure for non-blocking async data access
* V3 migration now unfreezes all frozen fragments to live fragments during deserialization
* New DiffService implementation that works with live contexts and computed values
* UI components updated to handle async fragment data via ComputedValue callback
* Jetbrains `@Blocking` annotation now checked using a custom Error Prone rule